# capfs

./: .gitignore  AUTHORS  ChangeLog.md  LICENSE  README.md  meson.build
fsops/: chmod.c  chown.c  fsops.h  getattr.c  init.c  ioctl.c  mkdir.c  opendir.c  read.c  readlink.c  releasedir.c  rmdir.c  truncate.c  unlink.c  write.c
include/: cap-fs.h  capfs.h
src/: backend_dummy.c  cap-fs.c  cap-fs.h  capfs.c  filesystem.c  main.c
src/backends/: dummy.c  files.c
src/fsops/: access.c  chmod.c  chown.c  create.c  destroy.c  flush.c  fsync.c  getattr.c  init.c  ioctl.c  link.c  mkdir.c  mknod.c  open.c  opendir.c  read.c  readdir.c  readlink.c  release.c  releasedir.c  rename.c  rmdir.c  statfs.c  symlink.c  truncate.c  unlink.c  utimens.c  write.c
src/include/: capfs_backend.h  capfs_debug.h  capfs_filesystem.h  capfs_handle.h  capfs_internal.h  debug.h
tools/: remount.sh  unmount.sh
